Change product icon

--- a/client/index.html
+++ b/client/index.html
@@ -84,7 +84,7 @@
       admin.addEntity(tag);
 
       admin.menu(nga.menu()
-        .addChild(nga.menu(product).icon('<span class="glyphicon glyphicon-cutlery"></span>'))
+        .addChild(nga.menu(product).icon('<span class="glyphicon glyphicon-shopping-cart"></span>'))
         .addChild(nga.menu(list).icon('<span class="glyphicon glyphicon-list"></span>'))
         .addChild(nga.menu(tag).icon('<span class="glyphicon glyphicon-th-large"></span>'))
         .addChild(nga.menu()
