--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,6 @@
         link: function(scope) {
           scope.addToCart = function() {
             var product = scope.entry.values;
-            console.log(product.ean, product.name, product.list, product.shelf);
             Restangular.all('wunderlist').post({
               ean: product.ean,
               name: product.name,
@@ -32,7 +31,7 @@
             });
           }
         },
-        template: '<a class="btn btn-default btn-xs" ng-href="http://www.codecheck.info/product.search?q={{product.values.ean}}" target="_blank"><span class="glyphicon glyphicon-search"></span>&nbsp;CodeCheck</a> \
+        template: '<a class="btn btn-default btn-xs" ng-href="http://www.codecheck.info/product.search?q={{entry.values.ean}}" target="_blank"><span class="glyphicon glyphicon-search"></span>&nbsp;CodeCheck</a> \
           <a class="btn btn-default btn-xs" ng-click="addToCart()"><span class="glyphicon glyphicon-shopping-cart"></span>&nbsp;Buy this</a>'
       };
     });
