--- a/client/index.html
+++ b/client/index.html
@@ -92,12 +92,13 @@
       var tag = nga.entity('tags').label('Product group');
       var product = nga.entity('products').identifier(nga.field('ean'));
 
-      list.listView().fields([
-        nga.field('id').label('Wunderlist List ID'),
+      list.editionView().fields([
         nga.field('name')
       ]);
+      list.listView().fields([
+        nga.field('id').label('Wunderlist List ID'),
+      ], list.editionView().fields());
       list.creationView().fields(list.listView().fields());
-      list.editionView().fields(list.listView().fields());
 
       tag.listView().fields([
         nga.field('name').isDetailLink(true),
@@ -106,30 +107,33 @@
       tag.creationView().fields(tag.listView().fields());
       tag.editionView().fields(tag.listView().fields());
 
+      var productBaseFields = [
+        nga.field('name'),
+        nga.field('list', 'reference')
+          .targetEntity(list)
+          .targetField(nga.field('name'))
+          .label('List'),
+        nga.field('tag', 'reference')
+          .targetEntity(tag)
+          .targetField(nga.field('name'))
+          .label('Product group'),
+        nga.field('shelf')
+      ];
       product.listView()
         .fields([
           nga.field('ean')
             .isDetailLink(true)
-            .label('EAN'),
-          nga.field('name'),
-          nga.field('list', 'reference')
-            .targetEntity(list)
-            .targetField(nga.field('name'))
-            .label('List'),
-          nga.field('tag', 'reference')
-            .targetEntity(tag)
-            .targetField(nga.field('name'))
-            .label('Product group'),
-          nga.field('shelf')
-        ])
+            .label('EAN')
+          ].concat(productBaseFields)
+        )
         .actions(['batch', 'export', 'create', '<sort-list></sort-list>'])
         .listActions('<product-list-actions entry="entry"></product-list-actions>');
       product.creationView().fields(product.listView().fields());
-      product.editionView().fields(product.listView().fields(), [
+      product.editionView().fields(productBaseFields.concat([
         nga.field('ean')
           .label('Barcode')
           .template('<angular-barcode ng-model="value" bc-type="svg"></angular-barcode>')
-      ]);
+      ]));
 
       admin.addEntity(product);
       admin.addEntity(list);
